# Product-Matcher

./: AbhijeetBiswas24MCA10070.docx  README.md  Railway.toml
backend-app/: Cargo.toml  railway.json
backend-app/src/: main.rs
backend-app/src/database/: mock_db.rs  mod.rs
backend-app/src/handlers/: mod.rs  products.rs  search.rs
backend-app/src/models/: product.rs
backend-app/src/utils/: similarity.rs
frontend-app/: index.html  package-lock.json  package.json  vite.config.ts
frontend-app/src/: App.css  App.tsx  index.css
frontend-app/src/components/ImageUpload/: ImageUpload.css  ImageUpload.tsx
frontend-app/src/components/Loading/: Loading.css  Loading.tsx
frontend-app/src/components/ProductCard/: ProductCard.css  ProductCard.tsx
frontend-app/src/components/ProductGrid/: ProductGrid.css  ProductGrid.tsx
frontend-app/src/hooks/: useProducts.ts
frontend-app/src/services/: api.ts
frontend-app/src/types/: product.ts
