[package]
name = "backend-app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
anyhow = "1.0.100"
base64 = "0.22.1"
futures-util = "0.3.31"
image = "0.25.8"
img_hash = "3.2.0"
mime_guess = "2.0.5"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rocket = "0.5.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
